   report by Aleksandr Kuzmenko)

- #8892, #8895: fix the definition of Is_young when CAML_INTERNALS is not
  defined.
  (David Allsopp, review by Xavier Leroy)

- #8896: deprecate addr typedef in misc.h
  (David Allsopp, suggestion by Xavier Leroy)

- #8981: Fix check for incompatible -c and -o options.
  (Greta Yorsh, review by Damien Doligez)

- #9051: fix unregistered local root in win32unix/select.c (could result in
  `select` returning file_descr-like values which weren't in the original sets)
  and correct initialisation of some blocks allocated with caml_alloc_small.
  (David Allsopp, review by Xavier Leroy)

OCaml 4.09 maintenance branch:
------------------------------

- #8953, #8954: Fix error submessages in the toplevel: do not display
  dummy locations
  (Armaël Guéneau, review by Gabriel Scherer)

- #8965, #8979: Alpine build failure caused by check-parser-uptodate-or-warn.sh
  (Gabriel Scherer and David Allsopp, report by Anton Kochkov)

OCaml 4.09.0 (19 September 2019):
---------------------------------

### Runtime system:

* #1725, #2279: Deprecate Obj.set_tag and Obj.truncate
  (Stephen Dolan, review by Gabriel Scherer, Damien Doligez and Xavier Leroy)

* #2240: Constify "identifier" in struct custom_operations
  (Cedric Cellier, review by Xavier Leroy)

* #2293: Constify "caml_named_value"
  (Stephen Dolan, review by Xavier Leroy)

- #8787, #8788: avoid integer overflow in caml_output_value_to_bytes
  (Jeremy Yallop, report by Marcello Seri)


- #2075, #7729: rename _T macro used to support Unicode in the (Windows) runtime
  in order to avoid compiler warning
  (Nicolás Ojeda Bär, review by Gabriel Scherer and David Allsopp)

- #2250: Remove extra integer sign-extension in compare functions
  (Stefan Muenzel, review by Xavier Leroy)

- #8607: Remove obsolete macros for pre-2002 MSVC support
  (Stephen Dolan, review by Nicolás Ojeda Bär and David Allsopp)

- #8656: Fix a bug in [caml_modify_generational_global_root]