@@ -420,6 +420,10 @@ OCaml 4.10.0
 - #8981: Fix check for incompatible -c and -o options.
   (Greta Yorsh, review by Damien Doligez)
 
+- #9031: Unregister Windows stack overflow handler while shutting
+  the runtime down.
+  (Dmitry Bely, review by David Allsopp)
+
 - #9051: fix unregistered local root in win32unix/select.c (could result in
   `select` returning file_descr-like values which weren't in the original sets)
   and correct initialisation of some blocks allocated with caml_alloc_small.
